Kata : Add products page and displaying products card fetched from API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
-<div class="">
+<div class="mt-4 rounded mx-5 text-bg-light">
     <router-outlet></router-outlet>
 </div>
