Kata : Adding Cart page with fetures Adjusting and Removing Items from Cart

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar shadow-sm" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-      <a class="navbar-brand">Ecommerce Kata</a>
-      <button class="fs-4 btn btn-link position-relative p-0 me-3"><i class="bi bi-cart"></i>
+      <a class="navbar-brand" routerLink="/">Ecommerce Kata</a>
+      <button routerLink="/cart" class="fs-4 btn btn-link position-relative p-0 me-3"><i class="bi bi-cart"></i>
         <span class="position-absolute top-0 start-100 badge rounded-pill bg-danger" style="font-size: 0.5rem">{{numberOfProductsInCart}}</span>
     </button>
     </div>
