--- a/src/app/components/products/product-card/product-card.component.html
+++ b/src/app/components/products/product-card/product-card.component.html
@@ -5,7 +5,7 @@
         alt="...">
     <div class="card-body">
         <h5 class="card-title text-truncate text-secondary-emphasis" title="{{product.title}}">{{product.title}}</h5>
-        <h5 class="my-3 text-primary-emphasis">{{product.price}}</h5>
+        <h5 class="my-3 text-primary-emphasis">{{product.price | currency}}</h5>
     </div>
 </div>
 
