--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,23 +1,28 @@
 <div class="p-3">
     <div class="container">
         <div class="row">
-            <div class="col-8">
-                <div class="d-flex justify-content-start me-2" *ngFor="let item of listOfProductsAddedToCart">
-                    <img src={{item.product.image}} class="mb-2 img-fluid"
-                        style="height: 70px; width: 100px; object-fit: contain;">
-                    <div class="ms-2">
-                        <div>{{item.product.title}}</div>
-                        <div class="text-primary">{{item.product.price | currency}}</div>
+            <div class="col-md-8 col-sm-12">
+                <div class="d-flex flex-wrap  justify-content-between me-2 mb-2"
+                    *ngFor="let item of listOfProductsAddedToCart">
+                    <div class="d-flex">
+                        <img src={{item.product.image}} class="mb-2 img-fluid"
+                            style="height: 70px; width: 100px; object-fit: contain;">
+                        <div class="ms-2">
+                            <div>{{item.product.title}}</div>
+                            <div class="text-primary">{{item.product.price | currency}}</div>
+                        </div>
                     </div>
-                    <div class="ms-auto d-flex align-items-start" style="height: max-content;">
-                        <input type="number" class="form-control" min=1 [(ngModel)]="item.quantity" style="width: 100px;" (ngModelChange)="quantityChanged($event)">
-                        <div class="float-end ms-2 align-self-center" (click)="removeItem(item.product)"><i class="bi bi-trash"></i></div>
+                    <div class="d-flex align-items-start" style="height: max-content;">
+                        <input type="number" class="form-control" min=1 [(ngModel)]="item.quantity"
+                            style="width: 100px;" (ngModelChange)="quantityChanged($event)">
+                        <div class="float-end ms-2 align-self-center" (click)="removeItem(item.product)"><i
+                                class="bi bi-trash"></i></div>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
-                <p>RÉCAPITULATIF DE LA COMMANDE</p>
-                <div class="fs-5 text-primary">TOTAL : {{totalPrice  | currency }}</div>
+            <div class="col-md-4 col-sm-12 p-3 card">
+                <p><b>RÉCAPITULATIF DE LA COMMANDE</b></p>
+                <div class="fs-5 text-primary">TOTAL : {{totalPrice | currency }}</div>
                 <hr>
                 <button type="button" class="btn btn-primary">PASSEZ À L'ÉTAPE DE PAIEMENT</button>
             </div>
